--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -5,5 +5,6 @@
   "item.firstmod.salad": "Salad",
   "item.firstmod.fuel": "Fuel",
   "item.firstmod.teleportation_wristwatch": "Teleportation Wristwatch",
-  "block.firstmod.andrew_block": "Andrew Block"
+  "block.firstmod.andrew_block": "Andrew Block",
+  "block.firstmod.boom_block": "Boom Block"
 }
